--- a/reading.Rmd
+++ b/reading.Rmd
@@ -1,10 +1,11 @@
 # Reading in data locally and from the web {#reading}
 
-```{r 01-reading, echo = FALSE, message = FALSE, warning = FALSE}
+```{r reading-setup, echo = FALSE, message = FALSE, warning = FALSE}
 library(magick)
 library(magrittr)
 library(knitr)
-knitr::opts_chunk$set(message = FALSE)
+knitr::opts_chunk$set(message = FALSE,
+                      fig.align = "center")
 ```
 
 ## Overview 
