--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1,10 +1,11 @@
+# Effective data visualization {#viz}
+
 ```{r viz-setup, include = FALSE}
 library(tidyverse)
 library(cowplot)
 library(knitr)
+knitr::opts_chunk$set(fig.align = "center")
 ```
-
-# Effective data visualization {#viz}
 
 ## Overview 
 This chapter will introduce concepts and tools relating to data visualization
